--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
+    "ethers": "^6.13.5",
     "express": "^4.21.2",
     "mongodb": "^6.12.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "ejs-lint": "^2.0.1",
+    "hardhat": "^2.22.18",
     "nodemon": "^3.1.9"
   },
   "scripts": {
