--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "ejs": "^3.1.10",
     "ethers": "^6.13.5",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mongodb": "^6.12.0",
-    "p-queue": "^8.1.0"
+    "p-queue": "^8.1.0",
+    "passport": "^0.7.0",
+    "passport-azure-ad-oauth2": "^0.0.4"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
