--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "async-mutex": "^0.5.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "ethers": "^6.13.5",
