--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "async-mutex": "^0.5.0",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
@@ -12,6 +13,7 @@
     "express-session": "^1.18.1",
     "jszip": "^3.10.1",
     "mongodb": "^6.12.0",
+    "nodemailer": "^6.10.0",
     "p-queue": "^8.1.0",
     "passport": "^0.7.0",
     "passport-azure-ad-oauth2": "^0.0.4",
