working queue / optimized voting

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "p-queue": "^8.1.0",
     "passport": "^0.7.0",
     "passport-azure-ad-oauth2": "^0.0.4",
-    "solc": "^0.8.28"
+    "socket.io": "^4.8.1",
+    "solc": "^0.8.28",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
