--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
     "async-mutex": "^0.5.0",
+    "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
