--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@hokify/agenda": "^6.3.0",
     "@sendgrid/mail": "^8.1.4",
     "agenda": "^5.0.0",
+    "archiver": "^7.0.1",
     "async-mutex": "^0.5.0",
     "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
@@ -14,6 +15,7 @@
     "ethers": "^6.13.5",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "json2csv": "^6.0.0-alpha.2",
     "jszip": "^3.10.1",
     "moment-timezone": "^0.5.47",
     "mongodb": "^6.12.0",
